# esp_upm_phase2

./: partition_sample.csv  sdkconfig.defaults
components/lv_examples/: CMakeLists.txt  component.mk
components/lv_examples/lv_examples/: lv_examples.h
components/lv_examples/lv_examples/src/lv_demo_custom/: lv_demo_custom.c  lv_demo_custom.h
components/lv_examples/lv_examples/src/lv_demo_custom/custom/: alertmessage_custom.c  custom.c  custom.h  dashboard_custom.c  flowsensor_parameter_custom.c  info_custom.c  metrology_calibration_custom.c  metrology_menu_custom.c  metrology_service_custom.c  metrology_settings_custom.c  parameter_custom.c  password_custom.c  preset_scenario_custom.c  preset_sequence_custom.c  summaryend_custom.c  summarysample_custom.c  summarystart_custom.c
components/lv_examples/lv_examples/src/lv_demo_widgets/: lv_demo_widgets.c
components/lv_examples/lv_examples/src/lv_demo_widgets/assets/: img_clothes.c  img_demo_widgets_avatar.c  img_lvgl_logo.c
components/lvgl/: .cproject
components/lvgl/src/extra/widgets/calendar/: lv_calendar_header_arrow.c
components/lvgl/tests/: .cproject
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c  lvgl_helpers.h  lvgl_spi_conf.h
components/lvgl_esp32_drivers/lvgl_tft/: disp_driver.c  disp_driver.c.bak  disp_driver.h  disp_spi.c  disp_spi.h  il3820.h  ili9488.c  ili9488.h  jd79653a.c  uc8151d.c
components/lvgl_esp32_drivers/lvgl_touch/: ft6x36.c  ft6x36.h  i2cdev.c  i2cdev.h  lm2759.c  lm2759.h  touch_driver.c  touch_driver.c.bak  touch_driver.h
main/: common.h  main.c  main.c.bak
